Kubernetes/Chapter-4 Cloud/3.3 To the Gateway-Pingpon app with GatewayAPI-Azure/manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pingpong-httproute
  namespace: default
spec:
  parentRefs:
  - name: agc-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: logoutput-svc
      port: 2345
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    backendRefs:
    - name: pingpong-svc
      port: 2345
